--- a/README
+++ b/README
@@ -1,1 +1,37 @@
-THIS PROJECT WAS DESIGNED AND IMPLEMENTED BY SOFTWARE ENGINEERING GROUP E, CLASS OF 2024, SEP-DEC SEMESTER.
+# SWE PROJECT GROUP E - HEALTH CENTRE SYSTEM
+
+## Overview
+The Health Centre Management System (HCMS) is a web application developed as part of the BCS 3106 Software Engineering semester project. 
+Designed to address the operational challenges of a local health centre with over 3000 registered patients, it enhances the efficiency of patient registration, appointment scheduling, and prescription management while improving overall patient experience.
+
+## Table of Contents
+- Features
+- Technologies Used
+- Testing
+- Contributors
+
+### Features
+1. Patient Registration: Efficiently register new patients with unique identifiers.
+2. Appointment Scheduling: Book and manage appointments with available doctors.
+3. Prescription Management: Record and manage prescriptions issued during appointments.
+4. Check-In Process: Allow patients to check in using their unique patient number or date of birth.
+5. User-Friendly Interface: Intuitive design for both patients and healthcare staff.
+
+### Technologies Used
+1. Programming Language: Python
+2. Web Framework: Flask
+3. Design Pattern: MVC (Model-View-Controller)
+
+### Testing
+The software underwent rigorous testing, including:
+
+1. Unit Testing: Validated key functionalities such as patient registration, appointment scheduling, and prescription recording.
+2. Integration Testing: Ensured seamless interaction between modules, confirming data synchronization.
+3. System Testing: Comprehensive assessment of overall functionality, including a full patient lifecycle simulation and stress testing.
+4. Simulated User Acceptance Testing (UAT): Gathered feedback from team members acting as end users, which led to iterative improvements in the UI and workflow.
+
+### Contributors
+GLORIA ABINEZA
+IAN MWANIKI KANYI
+MUSA KIPLANGAT BRIAN
+CHRISTINE OBURE
